# rust-project

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  fn.main.html  fn.run.html  help.html  index.html  readme.md  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml
docs/: base.md  main.md  map.md  robot.md  robots.md  simulation.md  ui.md
logs/: .gitignore  prefix.log.2025-09-30  prefix.log.2025-10-01
map/: fn.generate_sources_rand.html
robot/: fn.move_robot.html  fn.robot_vision.html  fn.robots_collecteur.html
rust_project/: all.html  enum.SimulationError.html  fn.main.html  fn.render_map_simple.html  fn.run.html  index.html  sidebar-items.js  struct.GameState.html  type.Result.html
rust_project/base/: enum.BaseMessage.html  enum.BroadcastMessage.html  index.html  sidebar-items.js  struct.Base.html  struct.BaseStateData.html  type.SharedBase.html
rust_project/game_state/: index.html  struct.GameState.html
rust_project/map/: enum.Tile.html  fn.generate_map.html  fn.generate_sources_rand.html  index.html  sidebar-items.js
rust_project/robot/: enum.RobotType.html  fn.collect_resources.html  fn.find_nearest_resource.html  fn.get_discovered_map.html  fn.go_to_nearest_point.html  fn.move_robot.html  fn.robots_eclaireur.html  index.html  sidebar-items.js  struct.Robot.html  struct.RobotPosition.html
rust_project/utils/: fn.configure_logger.html  sidebar-items.js
src/: base.rs  game_state.rs  main.rs  map.rs  robot.rs  robots.rs  simulation.rs  ui.rs  utils.rs
src/rust_project/: base.rs.html  (+5 more)
utils/: fn.clean_terminal.html  index.html
(+20 files in other folders)
