[package]
name = "rust-project"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
thiserror = "1.0.58"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = "0.3.18"
crossterm = { version = "0.28.1" }
ratatui = { version = "0.29.0" }
noise = "0.9.0"
term_size = "0.3.2"
color-eyre = "0.6.5"
pathfinding = "4.14.0"

