[package]
name = "rust-project"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
thiserror = "1.0.58"
noise = "0.8"

# Concurrence + timers + channels
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Logs
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = "0.3.18"

# Terminal + UI
crossterm = { version = "0.28.1" }
ratatui = { version = "0.29.0" }
futures-lite = "2.6.1"

